# mkprop

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  lang.ebnf  test-driver-data.txt  test-template.txt
src/: gen_class_file.rs  main.rs  parsing.rs
src/classwrite/: classwrite.d
src/parse/: mod.rs  parse_inner.lalrpop
